// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flexbox gap 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2px;
}

<div>
  <div
    class="layoutkit-flexbox emotion-0"
    data-testid="container"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
  </div>
</div>
`;

exports[`Flexbox 不可见 1`] = `
.emotion-0 {
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2px;
}

<div>
  <div
    class="layoutkit-flexbox emotion-0"
    data-testid="container"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
  </div>
</div>
`;

exports[`Flexbox 其余方向 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<div>
  <div
    class="layoutkit-flexbox emotion-0"
    data-testid="container"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
  </div>
</div>
`;

exports[`Flexbox 横向 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<div>
  <div
    class="layoutkit-flexbox emotion-0"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
  </div>
</div>
`;

exports[`Flexbox 横向撑开 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
}

<div>
  <div
    class="layoutkit-flexbox emotion-0"
    data-testid="container"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
  </div>
</div>
`;

exports[`Flexbox 默认 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div>
  <div
    class="layoutkit-flexbox emotion-0"
    data-testid="container"
  />
</div>
`;
